<resources>
    <string name="app_name" translatable="false">A1L1_Intro</string>
    <string name="hello_world">Hello World! This is first app!</string>
    <string name="change_text">Change text</string>
    <string name="enter_text_here">Enter text here</string>
    <string name="is_it_cool_app">Is it cool app?</string>
    <string name="option_1">option 1</string>
    <string name="option_2">option 2</string>
</resources>
